Login UI + Search UI merged

--- a/Inventory/Inventory/View/MainMenu.xaml
+++ b/Inventory/Inventory/View/MainMenu.xaml
@@ -27,7 +27,7 @@
                     Grid.Row="0"
                     BackgroundColor="#0ba3f4"
                     Image="search.png"
-                    />
+                    Clicked="SearchButton_Clicked"/>
                 <Button 
                     Grid.Column="0"
                     Grid.Row="1"
