--- a/Inventory/Inventory/View/MainMenu.xaml
+++ b/Inventory/Inventory/View/MainMenu.xaml
@@ -21,7 +21,8 @@
                     Grid.Column="0"
                     Grid.Row="0"
                     BackgroundColor="#0ba3f4"
-                    Image="Add.png"/>
+                    Image="Add.png"
+                    Clicked="AddButton_Clicked"/>
                 <Button 
                     Grid.Column="1"
                     Grid.Row="0"
