--- a/Inventory/Inventory/View/AddNew/AddNewPage.xaml
+++ b/Inventory/Inventory/View/AddNew/AddNewPage.xaml
@@ -7,12 +7,10 @@
     
     <ContentPage.Content>
         <StackLayout Padding="0,5,0,0">
-        
+
             <AbsoluteLayout>
-                <BoxView Color="Gray"
-                        AbsoluteLayout.LayoutBounds="0.5,0.1,120,120"
-                        AbsoluteLayout.LayoutFlags="PositionProportional"
-                         />
+                <Button Clicked="CameraButton_Clicked" IsVisible="True" AbsoluteLayout.LayoutBounds="0.5,0.1,240,120" AbsoluteLayout.LayoutFlags="PositionProportional" Text="'camera function'"/>
+                <!--I want this button to show the captured image, unsure how to code; Binding? BoxView?-->
             </AbsoluteLayout>
 
             <TableView Intent="Form">
@@ -27,16 +25,16 @@
                             </StackLayout>
                         </ViewCell>
                         <ViewCell >
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Delivery Date :"/>
-                                <DatePicker Date="{x:Static sys:DateTime.Today}" Format="dd MMM yyyy" MinimumDate="{x:Static sys:DateTime.Today}" FontSize="Small" TextColor="Gray"/>
+                            <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
+                                <Label Text="Delivery Date :" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
+                                <DatePicker Date="{x:Static sys:DateTime.Today}" Format="dd MMM yyyy" MinimumDate="{x:Static sys:DateTime.Today}" FontSize="Small" TextColor="Gray" VerticalOptions="Center"/>
                                 <!--The date picker here cannot be entered a date before today, may not be a required condition in real use-->
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Supplier Name :" />
-                                <Entry Keyboard="Default" Placeholder="Enter Supplier Name" PlaceholderColor="Gray" FontSize="Small"/>
+                            <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
+                                <Label Text="Supplier Name :" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
+                                <Entry Keyboard="Default" Placeholder="Enter Supplier Name" PlaceholderColor="Gray" FontSize="Small" VerticalOptions="Center"/>
                             </StackLayout>
                         </ViewCell>
 
@@ -44,9 +42,9 @@
                     <TableSection Title="Item Details">
 
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Item Type (Category) :"/>
-                                <Picker x:Name="itemCategoryPicker" Title="Choose New Item Category">
+                            <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
+                                <Label Text="Item Type (Category) :" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center" />
+                                <Picker x:Name="itemCategoryPicker" Title="Choose New Item Category" VerticalOptions="Center" FontSize="Small">
                                     <Picker.Items>
                                         <x:String>Computer</x:String>
                                         <x:String>Accessories/Parts</x:String>
@@ -56,10 +54,10 @@
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Item Type :"/>
+                            <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
+                                <Label Text="Item Type :" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
                                 <!--This picker needs to bind with itemCategoryPicker above-->
-                                <Picker x:Name="itemtypePicker" Title="Choose Item Type">
+                                <Picker x:Name="itemtypePicker" Title="Choose Item Type" VerticalOptions="Center" FontSize="Small">
                                     <Picker.Items>
                                         <!--If Category Computer-->
                                         <x:String>Desktop</x:String>
@@ -113,9 +111,9 @@
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Brand :"/>
-                                <Picker x:Name="itemBrand" Title="Choose Item Brand">
+                            <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
+                                <Label Text="Brand :" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
+                                <Picker x:Name="itemBrand" Title="Choose Item Brand" VerticalOptions="Center" FontSize="Small">
                                     <Picker.Items>
                                         <x:String>Acer</x:String>
                                         <x:String>Dell</x:String>
@@ -147,28 +145,28 @@
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Model :"/>
-                                <Entry Keyboard="Default" Placeholder="Enter Item Model" PlaceholderColor="Gray"/>
+                            <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
+                                <Label Text="Model :" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
+                                <Entry Keyboard="Default" Placeholder="Enter Item Model" PlaceholderColor="Gray" VerticalOptions="Center" FontSize="Small"/>
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Quantity :"/>
-                                <Label Text="{Binding Source={x:Reference itemQuantityStepper}, Path=Value}}"/>
-                                <Stepper x:Name="itemQuantityStepper"/>
+                            <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
+                                <Label Text="Quantity : " VerticalTextAlignment="Center"/>
+                                <Label Text="{Binding Source={x:Reference itemQuantityStepper}, Path=Value}}" FontSize="Medium" FontAttributes="Bold" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
+                                <Stepper x:Name="itemQuantityStepper" VerticalOptions="Center"/>
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Receiver Name :"/>
-                                <Entry Text="'this should the the login user name"/>
+                            <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
+                                <Label Text="Receiver Name :" VerticalTextAlignment="Center" HorizontalOptions="StartAndExpand"/>
+                                <Entry Text="'this should the the login user name" VerticalOptions="Center" FontSize="Small" FontAttributes="Italic"/>
                                 <!--This last entry should automatically set the login user as the receiver name-->
                             </StackLayout>
                         </ViewCell>
-
                         <ViewCell>
                             <Button Text="Save New Item"/>
+                            <!--Handler not set set-->
                         </ViewCell>
 
                     </TableSection>
