Revert "AddItem UI v0.01"
This reverts commit 02612e2ee1e6d9053da30b8f18c046444e81bd85.

--- a/Inventory/Inventory/View/AddNew/AddNewPage.xaml
+++ b/Inventory/Inventory/View/AddNew/AddNewPage.xaml
@@ -7,10 +7,12 @@
     
     <ContentPage.Content>
         <StackLayout Padding="0,5,0,0">
-
+        
             <AbsoluteLayout>
-                <Button Clicked="CameraButton_Clicked" IsVisible="True" AbsoluteLayout.LayoutBounds="0.5,0.1,240,120" AbsoluteLayout.LayoutFlags="PositionProportional" Text="'camera function'"/>
-                <!--I want this button to show the captured image, unsure how to code; Binding? BoxView?-->
+                <BoxView Color="Gray"
+                        AbsoluteLayout.LayoutBounds="0.5,0.1,120,120"
+                        AbsoluteLayout.LayoutFlags="PositionProportional"
+                         />
             </AbsoluteLayout>
 
             <TableView Intent="Form">
@@ -25,16 +27,16 @@
                             </StackLayout>
                         </ViewCell>
                         <ViewCell >
-                            <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
-                                <Label Text="Delivery Date :" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
-                                <DatePicker Date="{x:Static sys:DateTime.Today}" Format="dd MMM yyyy" MinimumDate="{x:Static sys:DateTime.Today}" FontSize="Small" TextColor="Gray" VerticalOptions="Center"/>
+                            <StackLayout Orientation="Horizontal">
+                                <Label Text="Delivery Date :"/>
+                                <DatePicker Date="{x:Static sys:DateTime.Today}" Format="dd MMM yyyy" MinimumDate="{x:Static sys:DateTime.Today}" FontSize="Small" TextColor="Gray"/>
                                 <!--The date picker here cannot be entered a date before today, may not be a required condition in real use-->
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
-                                <Label Text="Supplier Name :" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
-                                <Entry Keyboard="Default" Placeholder="Enter Supplier Name" PlaceholderColor="Gray" FontSize="Small" VerticalOptions="Center"/>
+                            <StackLayout Orientation="Horizontal">
+                                <Label Text="Supplier Name :" />
+                                <Entry Keyboard="Default" Placeholder="Enter Supplier Name" PlaceholderColor="Gray" FontSize="Small"/>
                             </StackLayout>
                         </ViewCell>
 
@@ -42,9 +44,9 @@
                     <TableSection Title="Item Details">
 
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
-                                <Label Text="Item Type (Category) :" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center" />
-                                <Picker x:Name="itemCategoryPicker" Title="Choose New Item Category" VerticalOptions="Center" FontSize="Small">
+                            <StackLayout Orientation="Horizontal">
+                                <Label Text="Item Type (Category) :"/>
+                                <Picker x:Name="itemCategoryPicker" Title="Choose New Item Category">
                                     <Picker.Items>
                                         <x:String>Computer</x:String>
                                         <x:String>Accessories/Parts</x:String>
@@ -54,10 +56,10 @@
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
-                                <Label Text="Item Type :" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
+                            <StackLayout Orientation="Horizontal">
+                                <Label Text="Item Type :"/>
                                 <!--This picker needs to bind with itemCategoryPicker above-->
-                                <Picker x:Name="itemtypePicker" Title="Choose Item Type" VerticalOptions="Center" FontSize="Small">
+                                <Picker x:Name="itemtypePicker" Title="Choose Item Type">
                                     <Picker.Items>
                                         <!--If Category Computer-->
                                         <x:String>Desktop</x:String>
@@ -111,9 +113,9 @@
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
-                                <Label Text="Brand :" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
-                                <Picker x:Name="itemBrand" Title="Choose Item Brand" VerticalOptions="Center" FontSize="Small">
+                            <StackLayout Orientation="Horizontal">
+                                <Label Text="Brand :"/>
+                                <Picker x:Name="itemBrand" Title="Choose Item Brand">
                                     <Picker.Items>
                                         <x:String>Acer</x:String>
                                         <x:String>Dell</x:String>
@@ -145,28 +147,28 @@
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
-                                <Label Text="Model :" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
-                                <Entry Keyboard="Default" Placeholder="Enter Item Model" PlaceholderColor="Gray" VerticalOptions="Center" FontSize="Small"/>
+                            <StackLayout Orientation="Horizontal">
+                                <Label Text="Model :"/>
+                                <Entry Keyboard="Default" Placeholder="Enter Item Model" PlaceholderColor="Gray"/>
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
-                                <Label Text="Quantity : " VerticalTextAlignment="Center"/>
-                                <Label Text="{Binding Source={x:Reference itemQuantityStepper}, Path=Value}}" FontSize="Medium" FontAttributes="Bold" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
-                                <Stepper x:Name="itemQuantityStepper" VerticalOptions="Center"/>
+                            <StackLayout Orientation="Horizontal">
+                                <Label Text="Quantity :"/>
+                                <Label Text="{Binding Source={x:Reference itemQuantityStepper}, Path=Value}}"/>
+                                <Stepper x:Name="itemQuantityStepper"/>
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
-                                <Label Text="Receiver Name :" VerticalTextAlignment="Center" HorizontalOptions="StartAndExpand"/>
-                                <Entry Text="'this should the the login user name" VerticalOptions="Center" FontSize="Small" FontAttributes="Italic"/>
+                            <StackLayout Orientation="Horizontal">
+                                <Label Text="Receiver Name :"/>
+                                <Entry Text="'this should the the login user name"/>
                                 <!--This last entry should automatically set the login user as the receiver name-->
                             </StackLayout>
                         </ViewCell>
+
                         <ViewCell>
                             <Button Text="Save New Item"/>
-                            <!--Handler not set set-->
                         </ViewCell>
 
                     </TableSection>
