--- a/Inventory/Inventory/View/AddNew/AddNewPage.xaml
+++ b/Inventory/Inventory/View/AddNew/AddNewPage.xaml
@@ -7,12 +7,23 @@
     
     <ContentPage.Content>
         <StackLayout Padding="0,5,0,0">
-        
+
             <AbsoluteLayout>
-                <BoxView Color="Gray"
+                <Frame
+                   BackgroundColor="Gray"
+                        AbsoluteLayout.LayoutBounds="0.5,0.1,120,120"
+                        AbsoluteLayout.LayoutFlags="PositionProportional">
+                    <Image
                         AbsoluteLayout.LayoutBounds="0.5,0.1,120,120"
                         AbsoluteLayout.LayoutFlags="PositionProportional"
-                         />
+                        x:Name="TakenPicture"
+                        HorizontalOptions="FillAndExpand"
+                        VerticalOptions="FillAndExpand"
+                        />
+                    <Frame.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OnTapped"/>
+                    </Frame.GestureRecognizers>
+                </Frame>
             </AbsoluteLayout>
 
             <TableView Intent="Form">
@@ -26,17 +37,17 @@
                                 <!--In the future need to make this be customized to the format of the actual DO in the database-->
                             </StackLayout>
                         </ViewCell>
-                        <ViewCell >
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Delivery Date :"/>
-                                <DatePicker Date="{x:Static sys:DateTime.Today}" Format="dd MMM yyyy" MinimumDate="{x:Static sys:DateTime.Today}" FontSize="Small" TextColor="Gray"/>
+                        <ViewCell>
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                <Label Text="Delivery Date :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                <DatePicker Date="{x:Static sys:DateTime.Today}" Format="dd MMM yyyy" MinimumDate="{x:Static sys:DateTime.Today}" FontSize="Small" TextColor="Gray" />
                                 <!--The date picker here cannot be entered a date before today, may not be a required condition in real use-->
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Supplier Name :" />
-                                <Entry Keyboard="Default" Placeholder="Enter Supplier Name" PlaceholderColor="Gray" FontSize="Small"/>
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                <Label Text="Supplier Name :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                <Entry Keyboard="Default" Placeholder="Enter Supplier Name" PlaceholderColor="Gray" FontSize="Small" />
                             </StackLayout>
                         </ViewCell>
 
@@ -44,9 +55,9 @@
                     <TableSection Title="Item Details">
 
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Item Type (Category) :"/>
-                                <Picker x:Name="itemCategoryPicker" Title="Choose New Item Category">
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                <Label Text="Item Type (Category) :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                <Picker x:Name="itemCategoryPicker" Title="Choose New Item Category" >
                                     <Picker.Items>
                                         <x:String>Computer</x:String>
                                         <x:String>Accessories/Parts</x:String>
@@ -56,10 +67,10 @@
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Item Type :"/>
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                <Label Text="Item Type :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
                                 <!--This picker needs to bind with itemCategoryPicker above-->
-                                <Picker x:Name="itemtypePicker" Title="Choose Item Type">
+                                <Picker x:Name="itemtypePicker" Title="Choose Item Type" >
                                     <Picker.Items>
                                         <!--If Category Computer-->
                                         <x:String>Desktop</x:String>
@@ -113,9 +124,9 @@
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Brand :"/>
-                                <Picker x:Name="itemBrand" Title="Choose Item Brand">
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                <Label Text="Brand :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                <Picker x:Name="itemBrand" Title="Choose Item Brand" >
                                     <Picker.Items>
                                         <x:String>Acer</x:String>
                                         <x:String>Dell</x:String>
@@ -147,22 +158,22 @@
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Model :"/>
-                                <Entry Keyboard="Default" Placeholder="Enter Item Model" PlaceholderColor="Gray"/>
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                <Label Text="Model :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                <Entry Keyboard="Default" Placeholder="Enter Item Model" PlaceholderColor="Gray" />
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Quantity :"/>
-                                <Label Text="{Binding Source={x:Reference itemQuantityStepper}, Path=Value}}"/>
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                <Label Text="Quantity :" HorizontalOptions="StartAndExpand" VerticalOptions="Center" />
+                                <Label Text="{Binding Source={x:Reference itemQuantityStepper}, Path=Value}" VerticalOptions="Center" />
                                 <Stepper x:Name="itemQuantityStepper"/>
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Receiver Name :"/>
-                                <Entry Text="'this should the the login user name"/>
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                <Label Text="Receiver Name :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                <Entry Text="This should the the Username" />
                                 <!--This last entry should automatically set the login user as the receiver name-->
                             </StackLayout>
                         </ViewCell>
