--- a/Inventory/Inventory/View/AddNew/AddNewPage.xaml
+++ b/Inventory/Inventory/View/AddNew/AddNewPage.xaml
@@ -49,7 +49,14 @@
                                         <x:String>Anas</x:String>
                                     </Picker.Items>
                                 </Picker>
-                                <Button Text="+" WidthRequest="30"/>
+                                <Button Text="+" 
+                                        WidthRequest="40" 
+                                        HeightRequest="30"
+                                        BorderColor="Black"
+                                        BorderWidth="1"
+                                        BackgroundColor="#166bf4"
+                                        TextColor="White"
+                                        />
                             </StackLayout>
                         </ViewCell>
 
@@ -67,9 +74,7 @@
                                         <x:String>Accessories/Parts</x:String>
                                         <x:String>Other Devices</x:String>
                                     </Picker.Items>
-                                    
                                 </Picker>
-                                    
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
@@ -161,6 +166,14 @@
                                         <x:String>-null-</x:String>
                                     </Picker.Items>
                                 </Picker>
+                                <Button Text="+" 
+                                        WidthRequest="40" 
+                                        HeightRequest="30"
+                                        BorderColor="Black"
+                                        BorderWidth="1"
+                                        BackgroundColor="#166bf4"
+                                        TextColor="White"
+                                        />
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
@@ -184,7 +197,11 @@
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <Button Text="Save New Item"/>
+                            <Button Text="Save New Item"
+                                     BorderColor="Black"
+                                     BorderWidth="1"
+                                     BackgroundColor="#166bf4"
+                                     TextColor="White"/>
                         </ViewCell>
                         
                     </TableSection>
