Updated on Page Login And Add
Login Page:
+) Add local storage for Token after login so user dont have to login again

Add Page:
+) Add (+)Plus button for Supplier and Brand for Adding
+) Implementing the Add function to UI

--- a/Inventory/Inventory/View/MainMenu.xaml
+++ b/Inventory/Inventory/View/MainMenu.xaml
@@ -51,6 +51,7 @@
                     BorderColor="Black"
                     BorderWidth="1"
                     Image="logout.png"
+                    Clicked="Logout_Clicked"
                     />
             </Grid>
         </AbsoluteLayout>
