--- a/Inventory/Inventory/View/Login/Login.xaml
+++ b/Inventory/Inventory/View/Login/Login.xaml
@@ -29,7 +29,7 @@
         
         
         <Frame
-            AbsoluteLayout.LayoutBounds="0.5,0.5,1,150"        
+            AbsoluteLayout.LayoutBounds="0.5,0.5,1,200"        
            AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional"
             BackgroundColor="White"
             Opacity="0.5"
@@ -56,16 +56,15 @@
             </StackLayout>
 
         </Frame>
-        <Button Text="Login" 
-                BackgroundColor="White"
-                TextColor="DarkBlue"
+        <Button Text="Login"  
            AbsoluteLayout.LayoutBounds="0.5,0.7,1,50"        
            AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional"
+           BackgroundColor="White"
+           TextColor="DarkBlue"
            BorderRadius="50"
-                BorderColor="DarkBlue"
-                BorderWidth="1"
-           Clicked="Login_Clicked"     
-                />
+           BorderColor="DarkBlue"
+           BorderWidth="1"
+           Clicked="Login_Clicked"/>
 
     </AbsoluteLayout>
 
