--- a/Inventory/Inventory/View/Scan/ScanPage.xaml
+++ b/Inventory/Inventory/View/Scan/ScanPage.xaml
@@ -19,9 +19,15 @@
             </AbsoluteLayout>
             
             <Label Text="" x:Name="ScannedCode" TextColor="Red" HorizontalOptions="Center"/>
-            <StackLayout Padding="30,10,30,10">
+            <StackLayout Padding="30,10,30,10" HorizontalOptions="CenterAndExpand">
                 <Button Text="New Scan" Clicked="ScanButton_Clicked"/>
                 <Label Text="Please scan the item barcode/QR code or enter the serial number" TextColor="Black" HorizontalOptions="Center" FontSize="Medium" HorizontalTextAlignment="Center"/>
+                <!-- This label should be made so that the basic details of the item are returned after the scan. To be made bindable -->
+            </StackLayout>
+            <StackLayout HorizontalOptions="End" Padding="0,0,10,0">
+                <Button Text="View Item Details" Clicked="ViewItemDetailsButton_Clicked"/>
+                <!-- I also want this view option to popup only after a scan has been inputted -->
+                <!-- The button should open up the ItemDetailsPage which should apply the scanned ID to return that item's details -->
             </StackLayout>
 
         </StackLayout>
