--- a/Inventory/Inventory/Services/ItemDetailsPage.xaml
+++ b/Inventory/Inventory/Services/ItemDetailsPage.xaml
@@ -2,15 +2,72 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Inventory.Services.ItemDetailsPage"
-             Title="'EquipmentID">
-    <!-- The title should be a bindable title of the scanned equipment ID -->
+             Title="'EquipmentID'"> <!-- The title should be a bindable title of the scanned equipment ID -->
     
     <ContentPage.Content>
+        
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <TableView Intent="Data">
+                <TableRoot >
+
+                    <TableSection Title="Delivery Details" >
+                        <ViewCell >
+                            <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
+                                <Label Text="Delivery Order No. :" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
+                                <Entry Keyboard="Default" 
+                                       Placeholder="'Format of DO: xx-xxx-xx'" 
+                                       PlaceholderColor="Gray" 
+                                       FontSize="Small" 
+                                       VerticalOptions="Center"
+                                       x:Name="DeliveryOrderNo"                                    
+                                       />
+                                <!--In the future need to make this be customized to the format of the actual DO in the database-->
+                            </StackLayout>
+                        </ViewCell>
+                        <ViewCell>
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                <Label Text="Delivery Date :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                <DatePicker Date="{x:Static sys:DateTime.Today}" 
+                                            Format="dd MMM yyyy" 
+                                            MinimumDate="{x:Static sys:DateTime.Today}" 
+                                            FontSize="Small" 
+                                            TextColor="Gray" 
+                                            VerticalOptions="Center"
+                                            x:Name="Date"
+                                            />
+                                <!--The date picker here cannot be entered a date before today, may not be a required condition in real use-->
+                            </StackLayout>
+                        </ViewCell>
+                        <ViewCell>
+                            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                <Label Text="Supplier Name :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                <!--<Entry Keyboard="Default" Placeholder="Choose Supplier Name" PlaceholderColor="Gray" FontSize="Small" VerticalOptions="Center"/>-->
+
+                                <Picker x:Name="SupplierPicker" Title="Choose Supplier" FontSize="Small" VerticalOptions="Center">
+                                    <Picker.Items>
+                                        <x:String>Aidee</x:String>
+                                        <x:String>Tin</x:String>
+                                        <x:String>Masdey</x:String>
+                                        <x:String>Anas</x:String>
+                                    </Picker.Items>
+                                </Picker>
+                                <Button Text="+" 
+                                        WidthRequest="40" 
+                                        HeightRequest="30"
+                                        BorderColor="Black"
+                                        BorderWidth="1"
+                                        BackgroundColor="#166bf4"
+                                        TextColor="White"
+                                        Clicked="AddSupplier_Clicked"
+                                        />
+                            </StackLayout>
+                        </ViewCell>
+
+                    </TableSection>
+                </TableRoot>
+            </TableView>
         </StackLayout>
+        
     </ContentPage.Content>
-    
+
 </ContentPage>
